Changes need for a successful Vagrant installation in October 2023 (#1)